<resources>
    <string name="app_name">MalwareDetectionApp</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="composite_text_login">Don’t have an account? Register now</string>
    <string name="composite_text_register">Already have an account? <font color="#009990">Login now</font></string>
    <string name="name">Name</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="register_now">Register Now</string>
</resources>