<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="92dp"
        android:layout_height="92dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/composite_text_register"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.95" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="312dp"
        android:layout_height="65dp"
        android:autofillHints=""
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.493"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="312dp"
        android:layout_height="65dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextPass"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="50dp" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="312dp"
        android:layout_height="65dp"
        android:layout_marginBottom="28dp"
        android:autofillHints=""
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editTextRePass"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="49dp" />

    <EditText
        android:id="@+id/editTextRePass"
        android:layout_width="312dp"
        android:layout_height="65dp"
        android:layout_marginBottom="72dp"
        android:autofillHints=""
        android:background="@drawable/button_background"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPass"
        app:layout_constraintEnd_toEndOf="@+id/editTextPass"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/editTextPass"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewRePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="52dp"
        android:background="@color/background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRePass"
        app:layout_constraintStart_toStartOf="@+id/editTextRePass"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="@+id/editTextName"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="@+id/editTextName"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@color/background"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_background"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/register_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewHaveAccount"
        tools:layout_editor_absoluteX="138dp" />

</androidx.constraintlayout.widget.ConstraintLayout>